# B3d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
sources/B/: Color.cpp  Color.hpp  Position.cpp  Position.hpp  Rect.cpp  Rect.hpp  SimpleApplication.cpp  SimpleApplication.hpp  Size.cpp  Size.hpp
sources/B/Graphics/: Drawable.hpp  Event.cpp  Event.hpp  Keyboard.cpp  Keyboard.hpp  Line.cpp  Line.hpp  Mouse.hpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Surface.hpp  Window.cpp  Window.hpp  X11.cpp  X11.hpp
sources/B/Math/: Matrix.cpp  Matrix.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
sources/B/Rendering/: Mesh.cpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  Polygon.cpp  Polygon.hpp  Transformable.cpp  Transformable.hpp  Vertex.cpp  Vertex.hpp
sources/B/Utils/: EventListener.hpp  Logger.cpp  Logger.hpp  Signal.hpp  Timeout.cpp  Timeout.hpp
tests/: .gitignore  CMakeLists.txt  Main.cpp  build.sh
